# caswaf

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Readme.md  buildandrun.sh  caswaf.conf  cleangenerated.sh  conanfile.txt  projectBuilder.cache  web-server.sln
build-tools/: htmltostring.bat
content/html/: App.html  root.html  statusdogs.html
content/html/content/: one.html  othercontent.html  two.html  twobobo.html
generateddev/: App.html.h  html.generated.h
generateddev/content/: one.html.h
generateddev/subparts/: test.html.h
html/: newTest.html  test.html
html/subparts/: test.html
lib/poco-master/: build_vs160.cmd  components
precompileHTML/: Compiler.cpp  Compiler.h  HTMLParser.cpp  HTMLParser.h  main.cpp  packages.config  precompileHTML.vcxproj  precompileHTML.vcxproj.filters
precompileHTML/Debug/: vc142.idb
precompileHTML/Debug/precompileHTML.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  precompileHTML.lastbuildstate
precompileHTML/x64/Debug/: HTMLParser.sbr  active_formatting.sbr  after_after_body.sbr  after_after_frameset.sbr  after_body.sbr  after_frameset.sbr  after_head.sbr  anchor_element.sbr  area_element.sbr  array.sbr  array_obj.sbr  attr.sbr  audio_element.sbr  avl.sbr  base_element.sbr  before_head.sbr  before_html.sbr  big5.sbr  body_element.sbr  br_element.sbr  bst.sbr  bst_map.sbr  button_element.sbr  canvas_element.sbr  cdata_section.sbr  character_data.sbr  collection.sbr  comment.sbr  compiler.obj.enc  consume.sbr  conv.sbr  d_list_element.sbr  data_element.sbr  data_list_element.sbr  decode.sbr  details_element.sbr  dialog_element.sbr  directory_element.sbr  div_element.sbr  diyfp.sbr  (+134 more)
precompileHTML/x64/Debug/precompileHTML.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  bscmake.command.1.tlog  bscmake.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  precompileHTML.lastbuildstate  precompileHTML.write.1u.tlog
precompileHTML/x64/Release/precompileHTML.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog  precompileHTML.write.1u.tlog
resources/html/: App.html  one.html
src/: PocoMainServer.cpp
src/ProjectBuilder/: Compiler.cpp  Compiler.h  ProjectStructure.cpp  ProjectStructure.h  log.h  main.cpp
src/controller/: Error404Controller.h  OneController.h  RootController.h
src/engine/: Controller.cpp  Controller.h  Part.cpp  Part.h  PartStructure.cpp  PartStructure.h  Resources.h  Route.cpp  Route.h  Routing.cpp  RoutingEngine.cpp  RoutingEngine.h  StaticController.h  StaticRecource.cpp  StaticRecource.h  casTypes.h  starStringEquals.h
src/engine/part/: DataPart.cpp  DataPart.h  Part.cpp  Part.h  StaticPart.cpp  StaticPart.h
src/html/: App.html.h  one.html.h  root.html.h  statusdogs.html.h
src/webserver/: Routing.cpp  Routing.h
src/webserver/controller/: AllController.h  Error404Controller.h  OneController.h  RootController.h
src/webserver/customParts/: PathPart.cpp  PathPart.h  UsernamePart.cpp  UsernamePart.h
web-server/: ClassDiagram1.cd  Controller.cpp  Controller.h  Error404Controller.cpp  Error404Controller.h  Part.h  PocoMainServer.cpp  RootController.cpp  RootController.h  Route.cpp  Route.h  Routing.cpp  Routing.h  RoutingEngine.cpp  RoutingEngine.h  StaticController.h  StaticRecource.h  StringExplode.h  WebPathHandler.cpp  WebPathHandler.h  casTypes.h  main.cpp  starStringEqualsTest.h  style.css.h  twoBoboController.h  twoController.h  web-server.vcxproj  web-server.vcxproj.filters  webserver.cpp  webserver.h
web-server/base64/: test.cpp
web-server/socket/examples/: echo-server.cpp  msg-distributor.cpp  proxy.cpp  simple-client.cpp
web-server/x64/Debug/: Controller.sbr  Error404Controller.sbr  Part.sbr  RootController.sbr  Route.sbr  Routing.sbr  RoutingEngine.sbr  base64.sbr  main.obj.enc  rootcontroller.new.obj.enc  rootcontroller.obj.enc  route.obj.enc  routingengine.new.obj.enc  stdHelpers.sbr  vc142.idb
web-server/x64/Debug/web-server.tlog/: CL.11424.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  bscmake.command.1.tlog  bscmake.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  web-server.lastbuildstate
web-server/x64/Release/web-server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  web-server.lastbuildstate  (+1 more)
x64/Debug/: precompileHTML.exp  precompileHTML.lib  web-server.ilk
x64/Release/: precompileHTML.iobj  precompileHTML.ipdb  web-server.iobj  web-server.ipdb
